--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,31 +1,28 @@
 .navbarSection{
-    height: 9vh;
+    height: 4.7vh;
     width: 100%;
     background: rgb(2,0,36);
     background: linear-gradient(138deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
     color: white;
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items: center;
     padding: 0.5rem 0;
 }
 
 .logo{
-    height: 3.5rem;
-    width: 3.5rem;
-    margin-left: 1rem;
+    height: 1.8rem;
+    width: 1.8rem;
 }
 
-.links{
-    margin-right: 1rem;
-}
+
 
 .link{
     margin: 0 0.5rem;
     text-decoration: none;
     font-weight: 600;
     color: black;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .link:hover{
