--- a/client/src/components/Pokemons/Pokemons.module.css
+++ b/client/src/components/Pokemons/Pokemons.module.css
@@ -1,15 +1,21 @@
-.allPokemons{
+.pokemonsSection{
+    display: flex;
     background-image: url(../Home/pokeStadium1.jpg);
     width: 100%;
-    height: 100vh;
-    
+    height: 100vh;    
+    z-index: -5;
+}
+
+.allPokemons{
+    width: 100%;
+    margin-left: 2rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 16px;
-    grid-row-gap: 8px;
+    grid-column-gap: 1rem;
+    grid-row-gap: 0rem;
     
-    z-index: -5;
+    z-index: 5;
 }
 
 .PokeTitle{
