--- a/client/src/components/Create/Create.module.css
+++ b/client/src/components/Create/Create.module.css
@@ -1,17 +1,20 @@
-.home{
-    background-image: url(pokeStadium1.jpg);
+.formSection, .form, .inputs{
+    display: flex;
+    flex-direction: column;
+}
+
+.formSection {
+    background-image: url(../Home/pokeStadium1.jpg);
     width: 100%;
     height: 90.5vh;
     overflow:hidden;
     background-size:cover;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 0.5rem 0;
 }
 
-.titleContainer{
+.form{
     background: rgba(255, 255, 255, 0.4);
     border-radius: 0.3rem;
     backdrop-filter: blur(1px);
@@ -20,21 +23,43 @@
 
     display: flex;
     flex-direction: column;
-    justify-items: center;
+    justify-content: center;
     align-items:center;
-    height: 30vh;
+    height: 60vh;
+    width: 18rem;
 }
 
-.homeTitle{
-    font-size: 3rem;
-    z-index: 5;
-    background: -webkit-linear-gradient(138deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0, 1) 43%, rgb(206, 37, 244) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;   
-    padding: 0 0.5rem;
+label{
+    width: 30%;
+    color: black;
+    left: 0;
+    text-align: left;
 }
 
-.homeButton{
+input {
+    width: 8rem;
+    margin-left: 2rem;
+    background-color: rgba(240, 248, 255, 0.9);
+    border-radius: 0.2rem;
+    border: none;
+}
+
+.input {
+    margin: 0.3rem 0;
+    display: flex;
+}
+
+.inputCreated{
+    margin: 0.3rem;
+    display: flex;
+    width: 8rem;
+}
+
+.formBtn{
+    margin-top: 1.5rem;
+}
+
+.formBtn{
     background: rgb(2,0,36);
     background: linear-gradient(138deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
     text-decoration: none;
@@ -43,16 +68,16 @@
     appearance: none;
     outline: none;
     border: none;
-    font-size: 1rem;
+    font-size: 0.8rem;
     border-radius: 0.8rem;
     position: relative;
-    line-height: 2rem;
-    width: 12rem;
+    line-height: 1.8rem;
+    width: 8rem;
     cursor: pointer;
     transition: all 0.5s;
 }
 
-.homeButton:hover{
+.formBtn:hover{
     background: rgb(2,0,26);
     background: linear-gradient(100deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
 }
