--- a/client/src/components/Pokemons/Pokemons.module.css
+++ b/client/src/components/Pokemons/Pokemons.module.css
@@ -2,7 +2,8 @@
     display: flex;
     background-image: url(../Home/pokeStadium1.jpg);
     width: 100%;
-    height: 100vh;    
+    height: 90.5vh;
+    background-size:cover;    
     z-index: -5;
 }
 
@@ -13,7 +14,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 1rem;
-    grid-row-gap: 0rem;
+    grid-row-gap: 0.5rem;
     
     z-index: 5;
 }
