validate function done

--- a/client/src/components/Create/Create.module.css
+++ b/client/src/components/Create/Create.module.css
@@ -25,8 +25,8 @@
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    height: 60vh;
-    width: 18rem;
+    height: 70vh;
+    width: 30rem;
 }
 
 label{
@@ -75,9 +75,29 @@ input {
     width: 8rem;
     cursor: pointer;
     transition: all 0.5s;
+    margin-top: 1.5rem;
 }
 
 .formBtn:hover{
     background: rgb(2,0,26);
     background: linear-gradient(100deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
+}
+
+.notSubmit{
+    text-decoration: none;
+    font-weight: 600;
+    color: black;
+    appearance: none;
+    font-size: 0.7rem;
+    border-radius: 0.8rem;
+    position: relative;
+    line-height: 1.8rem;
+    width: 10rem;
+    margin-top: 1.5rem;
+}
+
+.error{
+    color: red;
+    font-size: 0.7rem;
+    font-weight: 600;
 }
