--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -1,7 +1,9 @@
 .detailSection{
     background-image: url(../Home/pokeStadium1.jpg);
     width: 100%;
-    height: 85vh;
+    height: 90.5vh;
+    overflow:hidden;
+    background-size:cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -84,3 +86,27 @@
     background: rgb(2,0,26);
     background: linear-gradient(100deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
 } 
+
+.backButton{
+    background: rgb(2,0,36);
+    background: linear-gradient(138deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
+    text-decoration: none;
+    font-weight: 600;
+    color: white;
+    appearance: none;
+    outline: none;
+    border: none;
+    font-size: 1rem;
+    border-radius: 0.8rem;
+    position: relative;
+    line-height: 2rem;
+    width: 7rem;
+    cursor: pointer;
+    transition: all 0.5s;
+    margin: 1rem 0;
+}
+
+.homeButton:hover{
+    background: rgb(2,0,26);
+    background: linear-gradient(100deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
+}
