create is working. solving filters

--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -83,6 +83,7 @@
 }
 
 .btnDetail:hover{
+    font-size: 0.85rem;
     background: rgb(2,0,26);
     background: linear-gradient(100deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
 } 
@@ -106,7 +107,20 @@
     margin: 1rem 0;
 }
 
-.homeButton:hover{
+.backButton:hover{
+    font-size: 1.1rem;
     background: rgb(2,0,26);
     background: linear-gradient(100deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
+}
+
+.btnNot{
+    appearance: none;
+    outline: none;
+    border: none;
+    font-size: 0.8rem;
+    border-radius: 0.8rem;
+    position: relative;
+    line-height: 1.5rem;
+    width: 7rem;
+    margin: 1rem 0.5rem;
 }
