--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -13,6 +13,13 @@
 .logo{
     height: 2.2rem;
     width: 2.2rem;
+    transition: all 1.5s;
+}
+
+.logo:hover{
+    height: 2.3rem;
+    width: 2.3rem;
+    transform: rotate(360deg);
 }
 
 .link{
