--- a/client/src/components/Pokemons/Pokemons.module.css
+++ b/client/src/components/Pokemons/Pokemons.module.css
@@ -1,25 +1,110 @@
-.pokemonsSection{
-    display: flex;
-    background-image: url(../Home/pokeStadium1.jpg);
-    width: 100%;
-    height: 90.5vh;
-    background-size:cover;    
-    z-index: -5;
+/*menos de 640*/
+@media (max-width: 640px) {
+    .pokemonsSection{
+        display: flex;
+        background-image: url(../Home/pokeStadium1.jpg);
+        width: 100%;
+        height: 90.5vh;
+        background-size:cover;    
+        z-index: -5;
+    }
+
+    .allPokemons{
+        width: 100%;
+        margin-left: 0.7rem;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0.5rem;
+        grid-row-gap: 0.3rem;
+        z-index: 5;
+    }
+
+    .PokeTitle{
+        margin: 0.5rem;
+    }
 }
 
-.allPokemons{
-    width: 100%;
-    margin-left: 2rem;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 1rem;
-    grid-row-gap: 0.5rem;
-    
-    z-index: 5;
+/*de 640 a 768*/
+@media (min-width: 640px) {
+    .pokemonsSection{
+        display: flex;
+        background-image: url(../Home/pokeStadium1.jpg);
+        width: 100%;
+        height: 90.5vh;
+        background-size:cover;    
+        z-index: -5;
+    }
+
+    .allPokemons{
+        width: 100%;
+        margin-left: 0.7rem;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0.5rem;
+        grid-row-gap: 0.3rem;
+        z-index: 5;
+    }
+
+    .PokeTitle{
+        margin: 0.5rem;
+    }
 }
 
-.PokeTitle{
-    margin: 0.5rem;
+/*de 768 a 1200*/
+@media (min-width: 768px) {
+    .pokemonsSection{
+        display: flex;
+        background-image: url(../Home/pokeStadium1.jpg);
+        width: 100%;
+        height: 90.5vh;
+        background-size:cover;    
+        z-index: -5;
+    }
+
+    .allPokemons{
+        width: 100%;
+        margin-left: 1rem;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 0.5rem;
+        grid-row-gap: 0.3rem;
+        z-index: 5;
+    }
+
+    .PokeTitle{
+        margin: 0.5rem;
+    }
 }
 
+/********/
+/*MAS DE 1200*/
+@media (min-width: 1200px) {
+    .pokemonsSection{
+        display: flex;
+        background-image: url(../Home/pokeStadium1.jpg);
+        width: 100%;
+        height: 90.5vh;
+        background-size:cover;    
+        z-index: -5;
+    }
+
+    .allPokemons{
+        width: 100%;
+        margin-left: 2rem;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 1rem;
+        grid-row-gap: 0.5rem;
+        
+        z-index: 5;
+    }
+
+    .PokeTitle{
+        margin: 0.5rem;
+    }
+
+}
