--- a/client/src/components/Pokemons/Pokemons.module.css
+++ b/client/src/components/Pokemons/Pokemons.module.css
@@ -84,11 +84,24 @@
 @media (min-width: 1200px) {
     .pokemonsSection{
         display: flex;
+        align-items: center;
         background-image: url(../Home/pokeStadium1.jpg);
         width: 100%;
-        height: 90.5vh;
+        height: 93vh;
         background-size:cover;    
         z-index: -5;
+    }
+
+    .filtered{
+        width: 20%;
+    }
+
+    .pokePaged{
+        width: 78%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .allPokemons{
@@ -107,4 +120,24 @@
         margin: 0.5rem;
     }
 
+    .loading{
+        display: flex;
+        flex-direction: column;
+        margin-left: 22rem;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    @keyframes load {
+        from {transform: rotate(0deg);}
+        to {transform: rotate(360deg);}
+    }
+
+    .loading img{
+        width: 8rem;
+        height: 8rem;   
+        animation-name: load;
+        animation-duration: 2.5s;
+    }
 }
