before change Create with Errors

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -34,7 +34,7 @@
 
 /*de 640 a 768*/
 @media (min-width: 640px) {
-    .navbarResponsive{
+    .navbarSection{
         height: 4vh;
         width: 100%;
         background: rgb(2,0,36);
