--- a/client/src/components/Filters/Filters.module.css
+++ b/client/src/components/Filters/Filters.module.css
@@ -1,35 +1,49 @@
-/*de 640 a 1200*/
+/*menos de 640*/
 @media (max-width: 640px) {
-    .filterSection{
-        width: 12rem;
-        height: 86vh;
-        margin: 0.5rem 1rem;
-        padding: 0.5rem;
+    .allSection{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:center;
         background: rgba(255, 255, 255, 0.4);
-        border-radius: 0.3rem;
         backdrop-filter: blur(1px);
         box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
         border: 1px solid rgba(255, 255, 255, 0.18);
+        
+    }
+    .filterSection{
+        width: 100% !important;
+        height: 2.5rem;
+        margin: 0 0 0rem 0;
+        padding: 0.2rem;
+        
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-items: center;
+        /*flex-direction: column;*/
+        align-items:flex-start;
+        justify-content:center;
     }
 
     .filters{
-        width: 10rem;
-        margin: 0.3rem;
+        width: 100%;
+        margin-left: -0.2rem;
         background: transparent;
         border: none;
         display: flex;
-        flex-direction: column;
+     /*flex-direction: column;*/
         align-items: center;
-        justify-items: center;
+        justify-content:center;
     }
 
-    .filterBy, .filterSubitle, .filterTitle select{
+    .filterTitle, .filterSubitle{
+        display: none;
+    }
+    .filterBy, .filterTitle select{
         background-color: transparent;
         border: none;
+    }
+
+    .filterBy{
+        margin: 0.1rem;
     }
 
     .filterTitle{
@@ -42,16 +56,17 @@
 
     select {
         border-radius: 0.2rem;
-        height: 1.5rem;
-        font-size: 0.7rem;
+        height: 1rem;
+        font-size: 0.5rem;
         font-weight: 600;
     }
 
     option {
         border-radius: 0.2rem;
-        height: 1.5rem;
-        font-size: 0.7rem;
+        height: 1rem;
+        font-size: 0.5rem;
         font-weight: 600;
+        margin-bottom: 0.2rem;
     }
 
     .filterBtn{
@@ -63,13 +78,13 @@
         appearance: none;
         outline: none;
         border: none;
-        font-size: 0.8rem;
+        font-size: 0.6rem;
         border-radius: 0.8rem;
         position: relative;
-        line-height: 2rem;
-        width: 7rem;
+        line-height: 1.5rem;
+        width: 5rem;
         cursor: pointer;
-        margin-top: 1.5rem;
+        margin: -0.5rem 0 0.5rem 0;
         transition: all 0.5s;
     }
 
@@ -81,22 +96,32 @@
 
     .showFilter{
         margin: 0.5rem 0;
+        font-size: 0.6rem;
     }
 }
 
 
-/*de 640 a 1200*/
+/*mas de 640 */
 @media (min-width: 640px) {
+    .allSection{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:center;
+        background: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(1px);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        margin: 0.5rem 0.7rem; 
+        border-radius: 0.3rem;
+        
+    }
     .filterSection{
         width: 12rem;
-        height: 86vh;
+        height: 82vh;
         margin: 0.5rem 0.6rem;
         padding: 0.5rem;
-        background: rgba(255, 255, 255, 0.4);
-        border-radius: 0.3rem;
-        backdrop-filter: blur(1px);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-        border: 1px solid rgba(255, 255, 255, 0.18);
+        display: flex;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -105,7 +130,7 @@
 
     .filters{
         width: 10rem;
-        margin: 0.25rem;
+        margin: 0rem;
         background: transparent;
         border: none;
         display: flex;
@@ -119,12 +144,17 @@
         border: none;
     }
 
+    .filterBy{
+        margin: 0;
+    }
+
     .filterTitle{
-        margin: 0.8rem 0 0.5rem 0;
+        margin: 0.5rem 0;
     }
 
     .filterSubitle{
         margin-bottom: 0.4rem;
+        font-size: 1rem;
     }
 
     select {
@@ -156,7 +186,7 @@
         line-height: 2rem;
         width: 7rem;
         cursor: pointer;
-        margin-top: 1.5rem;
+        margin: -3rem 0 0.5rem 0;
         transition: all 0.5s;
     }
 
@@ -168,92 +198,7 @@
 
     .showFilter{
         margin: 0.5rem 0;
+        font-size: 0.9rem;
     }
 }
 
-/********/
-/*MAS DE 1200*/
-    @media (min-width: 1200px) {
-    .filterSection{
-        width: 15rem;
-        height: 86vh;
-        margin: 0.5rem 1rem;
-        padding: 0.5rem;
-        background: rgba(255, 255, 255, 0.4);
-        border-radius: 0.3rem;
-        backdrop-filter: blur(1px);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-items: center;
-    }
-
-    .filters{
-        width: 15rem;
-        margin: 0.3rem;
-        background: transparent;
-        border: none;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-items: center;
-    }
-
-    .filterBy, .filterSubitle, .filterTitle select{
-        background-color: transparent;
-        border: none;
-    }
-
-    .filterTitle{
-        margin: 0.8rem 0 0.5rem 0;
-    }
-
-    .filterSubitle{
-        margin-bottom: 0.4rem;
-    }
-
-    select {
-        border-radius: 0.2rem;
-        height: 1.5rem;
-        font-size: 0.8rem;
-        font-weight: 600;
-    }
-
-    option {
-        border-radius: 0.2rem;
-        height: 1.5rem;
-        font-size: 0.8rem;
-        font-weight: 600;
-    }
-
-    .filterBtn{
-        background: rgb(2,0,36);
-        background: linear-gradient(138deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
-        text-decoration: none;
-        font-weight: 600;
-        color: white;
-        appearance: none;
-        outline: none;
-        border: none;
-        font-size: 1rem;
-        border-radius: 0.8rem;
-        position: relative;
-        line-height: 2rem;
-        width: 9rem;
-        cursor: pointer;
-        margin-top: 1.5rem;
-        transition: all 0.5s;
-    }
-
-    .filterBtn:hover{
-        font-size: 1.1rem;
-        background: rgb(2,0,26);
-        background: linear-gradient(100deg, rgba(2,0,36,1) 0%, rgba(255, 0, 0 ,1) 43%, rgba(227,108,255,1) 100%);
-    }
-
-    .showFilter{
-        margin: 0.5rem 0;
-    }
-}
