--- a/client/src/components/Pokemons/Pokemons.module.css
+++ b/client/src/components/Pokemons/Pokemons.module.css
@@ -2,22 +2,34 @@
 @media (max-width: 640px) {
     .pokemonsSection{
         display: flex;
+        flex-direction: column;
         background-image: url(../Home/pokeStadium1.jpg);
         width: 100%;
-        height: 90.5vh;
-        background-size:cover;    
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;    
+        background-color: black;
         z-index: -5;
+    }
+
+    .filtered{
+        width: 100%;
+        /*margin-right: 7.5rem;*/
     }
 
     .allPokemons{
         width: 100%;
-        margin-left: 0.7rem;
         display: grid;
+        
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(2, 1fr);
         grid-column-gap: 0.5rem;
         grid-row-gap: 0.3rem;
         z-index: 5;
+
+        justify-items: center;
+        justify-self: center;
     }
 
     .PokeTitle{
@@ -30,9 +42,11 @@
     .pokemonsSection{
         display: flex;
         background-image: url(../Home/pokeStadium1.jpg);
-        width: 100%;
-        height: 90.5vh;
-        background-size:cover;    
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;    
+        background-color: black;
         z-index: -5;
     }
 
@@ -56,15 +70,21 @@
 @media (min-width: 768px) {
     .pokemonsSection{
         display: flex;
+        justify-content: center;
         background-image: url(../Home/pokeStadium1.jpg);
         width: 100%;
-        height: 90.5vh;
+        height: 128vh;
         background-size:cover;    
         z-index: -5;
     }
 
+    .filtered{
+        width: 25%;
+        margin-right: 1.5rem;
+    }
+
     .allPokemons{
-        width: 100%;
+        width: 72%;
         margin-left: 1rem;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -97,7 +117,7 @@
     }
 
     .pokePaged{
-        width: 78%;
+        width: 76%;
         display: flex;
         flex-direction: column;
         justify-content: center;
