--- a/client/src/components/Paging/Paging.module.css
+++ b/client/src/components/Paging/Paging.module.css
@@ -84,6 +84,26 @@
         transition: all 0.3s;
     }
     
+    .match{
+        border-radius: 50%;
+        border: none;
+        height: 1.8rem;
+        width: 1.8rem;
+        font-size: 0.8rem;
+        font-weight: 600;
+        color: white;
+        background-color: rgb(255, 0, 0);
+        margin: 0 0.2rem;
+        transition: all 0.3s;
+    }
+
+    .match:hover{
+        cursor: pointer;
+        color: black;
+        font-size: 0.9rem;
+        transform: rotate(360deg);
+    }
+
     .pageBtn{
         border-radius: 0.5rem;
         width: 3.8rem;
